welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
	var rep = false
	if (outsideMode) {
		if  ( n <= 1 || n => 10 ) {
			rep = false
		}
	} else { 
		rep = ( n>=1 && n<=10)
	}
	return rep
}
